fix(worldgen): keep exact x1 tiles stable across micro-pan